// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactFuri /> custom render prop 1`] = `
<div>
  <span
    lang="ja"
    style="display: inline-flex; flex-flow: row wrap; font-family: 'ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'TakaoPゴシック', TakaoPGothic, '游ゴシック', '游ゴシック体', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ ゴシック', 'MS Gothic', HiraKakuProN-W3, 'MotoyaLCedar', 'Droid Sans Japanese', sans-serif;"
  >
    <span
      lang="ja"
      style="display: inline-flex; font-size: 24px; line-height: 1; flex-flow: column nowrap; justify-content: flex-end; align-items: center; align-self: flex-end;"
    >
      <span
        lang="ja"
        style="display: block; font-size: 0.5em; letter-spacing: -0.02em; margin: 0px 0.1em; padding-top: 0.2em; padding-bottom: 0.1em; user-select: none; opacity: 0.9;"
      >
        かん
      </span>
      <span
        lang="ja"
        style="display: block;"
      >
        漢
      </span>
    </span>
    <span
      lang="ja"
      style="display: inline-flex; font-size: 24px; line-height: 1; flex-flow: column nowrap; justify-content: flex-end; align-items: center; align-self: flex-end;"
    >
      <span
        lang="ja"
        style="display: block; font-size: 0.5em; letter-spacing: -0.02em; margin: 0px 0.1em; padding-top: 0.2em; padding-bottom: 0.1em; user-select: none; opacity: 0.9;"
      >
        じ
      </span>
      <span
        lang="ja"
        style="display: block;"
      >
        字
      </span>
    </span>
  </span>
</div>
`;

exports[`<ReactFuri /> furi provided: render furigana over related kanji blocks 1`] = `
<div>
  <span
    lang="ja"
    style="display: inline-flex; flex-flow: row wrap; font-family: 'ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'TakaoPゴシック', TakaoPGothic, '游ゴシック', '游ゴシック体', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ ゴシック', 'MS Gothic', HiraKakuProN-W3, 'MotoyaLCedar', 'Droid Sans Japanese', sans-serif;"
  >
    <span
      lang="ja"
      style="display: inline-flex; font-size: 24px; line-height: 1; flex-flow: column nowrap; justify-content: flex-end; align-items: center; align-self: flex-end;"
    >
      <span
        lang="ja"
        style="display: block; font-size: 0.5em; letter-spacing: -0.02em; margin: 0px 0.1em; padding-top: 0.2em; padding-bottom: 0.1em; user-select: none; opacity: 0.9;"
      >
        かん
      </span>
      <span
        lang="ja"
        style="display: block;"
      >
        漢
      </span>
    </span>
    <span
      lang="ja"
      style="display: inline-flex; font-size: 24px; line-height: 1; flex-flow: column nowrap; justify-content: flex-end; align-items: center; align-self: flex-end;"
    >
      <span
        lang="ja"
        style="display: block; font-size: 0.5em; letter-spacing: -0.02em; margin: 0px 0.1em; padding-top: 0.2em; padding-bottom: 0.1em; user-select: none; opacity: 0.9;"
      >
        じ
      </span>
      <span
        lang="ja"
        style="display: block;"
      >
        字
      </span>
    </span>
  </span>
</div>
`;

exports[`<ReactFuri /> no furi provided: render relevant readings over kanji blocks 1`] = `
<div>
  <span
    lang="ja"
    style="display: inline-flex; flex-flow: row wrap; font-family: 'ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'TakaoPゴシック', TakaoPGothic, '游ゴシック', '游ゴシック体', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ ゴシック', 'MS Gothic', HiraKakuProN-W3, 'MotoyaLCedar', 'Droid Sans Japanese', sans-serif;"
  >
    <span
      lang="ja"
      style="display: inline-flex; font-size: 24px; line-height: 1; flex-flow: column nowrap; justify-content: flex-end; align-items: center; align-self: flex-end;"
    >
      <span
        lang="ja"
        style="display: block; font-size: 0.5em; letter-spacing: -0.02em; margin: 0px 0.1em; padding-top: 0.2em; padding-bottom: 0.1em; user-select: none; opacity: 0.9;"
      />
      <span
        lang="ja"
        style="display: block;"
      >
        お
      </span>
    </span>
    <span
      lang="ja"
      style="display: inline-flex; font-size: 24px; line-height: 1; flex-flow: column nowrap; justify-content: flex-end; align-items: center; align-self: flex-end;"
    >
      <span
        lang="ja"
        style="display: block; font-size: 0.5em; letter-spacing: -0.02em; margin: 0px 0.1em; padding-top: 0.2em; padding-bottom: 0.1em; user-select: none; opacity: 0.9;"
      >
        みま
      </span>
      <span
        lang="ja"
        style="display: block;"
      >
        見舞
      </span>
    </span>
    <span
      lang="ja"
      style="display: inline-flex; font-size: 24px; line-height: 1; flex-flow: column nowrap; justify-content: flex-end; align-items: center; align-self: flex-end;"
    >
      <span
        lang="ja"
        style="display: block; font-size: 0.5em; letter-spacing: -0.02em; margin: 0px 0.1em; padding-top: 0.2em; padding-bottom: 0.1em; user-select: none; opacity: 0.9;"
      />
      <span
        lang="ja"
        style="display: block;"
      >
        い
      </span>
    </span>
  </span>
</div>
`;

exports[`<ReactFuri /> no reading or furi provided: just render word 1`] = `
<div>
  <span
    lang="ja"
    style="display: inline-flex; flex-flow: row wrap; font-family: 'ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'TakaoPゴシック', TakaoPGothic, '游ゴシック', '游ゴシック体', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ ゴシック', 'MS Gothic', HiraKakuProN-W3, 'MotoyaLCedar', 'Droid Sans Japanese', sans-serif;"
  >
    <span
      lang="ja"
      style="display: inline-flex; font-size: 24px; line-height: 1; flex-flow: column nowrap; justify-content: flex-end; align-items: center; align-self: flex-end;"
    >
      <span
        lang="ja"
        style="display: block; font-size: 0.5em; letter-spacing: -0.02em; margin: 0px 0.1em; padding-top: 0.2em; padding-bottom: 0.1em; user-select: none; opacity: 0.9;"
      />
      <span
        lang="ja"
        style="display: block;"
      >
        漢字
      </span>
    </span>
  </span>
</div>
`;

exports[`<ReactFuri /> showFuri false: no furigana rendered 1`] = `
<div>
  <span
    lang="ja"
    style="display: inline-flex; flex-flow: row wrap; font-family: 'ヒラギノ角ゴ ProN', 'Hiragino Kaku Gothic ProN', 'TakaoPゴシック', TakaoPGothic, '游ゴシック', '游ゴシック体', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ ゴシック', 'MS Gothic', HiraKakuProN-W3, 'MotoyaLCedar', 'Droid Sans Japanese', sans-serif;"
  >
    <span
      lang="ja"
      style="display: inline-flex; font-size: 24px; line-height: 1; flex-flow: column nowrap; justify-content: flex-end; align-items: center; align-self: flex-end;"
    >
      <span
        lang="ja"
        style="display: block;"
      >
        漢
      </span>
    </span>
    <span
      lang="ja"
      style="display: inline-flex; font-size: 24px; line-height: 1; flex-flow: column nowrap; justify-content: flex-end; align-items: center; align-self: flex-end;"
    >
      <span
        lang="ja"
        style="display: block;"
      >
        字
      </span>
    </span>
  </span>
</div>
`;
